[build-system]
# NOTE: Raise the setuptools floor to >=61 to align with modern
# pyproject-based builds and leave room for partial PEP 621 adoption later.
requires= [
  "setuptools>=61",
  "scikit-build>=0.13",
  "cmake>=3.15",
  "ninja"
]
# PEP 517 backend used by `python -m build` with classic scikit-build.
build-backend = "setuptools.build_meta"

# TODO (modernization): Future migration to scikit-build-core and PEP 621.
# - Define metadata in a [project] table and configure scikit-build under
#   [tool.scikit-build] or [tool.scikit-build-core]. This would enable
#   dropping setup.py.in entirely and simplify versioning.
